# ai-agent

./: .env.example  .gitignore  README.md  pyproject.toml
cogs/: demo.yaml
config/: agent.yaml
examples/: demo.sh
src/ai_agent/: __init__.py  core.py  fallbacks.py  hooks.py  tools.py  types.py  utils.py
tests/: test_cycle.py
